--- a/docs/css/base.css
+++ b/docs/css/base.css
@@ -16,7 +16,7 @@ body {
 
 :root {
     --document-color: #dfe6e9;
-    --body-bcg-color: #22272E;
+    --body-bcg-color: #2D333B;
     --item-bcg-color: rgb(99, 110, 114, 0.4);
     --button-bcg-color: rgb(45, 52, 54);
     --link-color: #eaf0f3;
